--- a/tokens/0xab16e0d25c06cb376259cc18c1de4aca57605589.yaml
+++ b/tokens/0xab16e0d25c06cb376259cc18c1de4aca57605589.yaml
@@ -9,13 +9,14 @@ description: >-
   something to society.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=1945661.0
-- CoinMarketCap: fucktoken
-- Email: mailto:support@fucktoken.io
+- CoinMarketCap: https://coinmarketcap.com/currencies/fucktoken/
+- Email: mailto:contact@fucktoken.com
 - Reddit: https://www.reddit.com/r/FuckToken/
 - Slack: https://fucktoken.slack.com/join/shared_invite/MjMyNDgzNzc4MDY1LTE1MDM5Nzg2MTctY2FlOWMzMGNiMw
+- Slack: https://join.slack.com/t/fucktoken/shared_invite/MjE5NDYzNjUyOTAwLTE1MDEzMDIzOTgtMTE4YTk3NjM0MA
+- Telegram: https://t.me/FuckToken
 - Twitter: https://twitter.com/FuckToken
-- Website: http://fucktoken.io/
-- Website: http://www.fucktoken.io/
-- Whitepaper: http://fucktoken.io/FUCKToken_Whitepaper_V1.pdf
+- Website: https://www.fucktoken.com/
+- Whitepaper: https://fucktoken.com/download/FUCKToken_Whitepaper_V1.pdf
 name: FinallyUsableCryptoKarma
 symbol: FUCK
