--- a/new/0x6f539a9456a5bcb6334a1a41207c3788f5825207.yaml
+++ b/new/0x6f539a9456a5bcb6334a1a41207c3788f5825207.yaml
@@ -1,16 +1,15 @@
 ---
-__FORKDELTA_CUSTOM_SYMBOL: OHNI_OLD
-addr: '0x7f2176ceb16dcb648dc924eff617c3dc2befd30d'
-decimals: 0
+addr: '0x6f539a9456a5bcb6334a1a41207c3788f5825207'
+decimals: 18
 description: >-
   Ohni is an economic system for the new age.
 links:
+- Website: http://ohni.us
 - Email: mailto:customer.service@ohni.io
 - Github: https://github.com/ttmohni/Ohni
 - Reddit: https://www.reddit.com/r/Ohni_Official/
 - Twitter: https://twitter.com/ohni_io
-- Website: http://ohni.io
-- Website: http://ohni.io/
+- Telegram: https://t.me/OhniGroup
 - Whitepaper: https://ohni.io/whitepaper.pdf
 name: Ohni
-symbol: Ohni
+symbol: OHNI
