--- a/tokens/0xee688d34c1cc02fc81b2f3f05c489e05d4c0b6ba.yaml
+++ b/tokens/0xee688d34c1cc02fc81b2f3f05c489e05d4c0b6ba.yaml
@@ -6,7 +6,7 @@ description: >-
   doing ethereum blockchain more fuller and better. Element is erc-20 token,having property as an element, in
   this case as blockchain element.EM(Element) have 10 token total supply.
 links:
-- Website: https://artbik555.wixsite.com/element
+- Website: https://elementerc.tech/
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2408354
 name: Element
 symbol: EM
