--- a/tokens/0x84936cF7630aa3e27dd9aff968b140d5aee49f5a.yaml
+++ b/tokens/0x84936cF7630aa3e27dd9aff968b140d5aee49f5a.yaml
@@ -1,5 +1,5 @@
 ---
-addr: '0x84936cF7630AA3e27Dd9AfF968b140d5AEE49F5a'
+addr: '0x84936cF7630aa3e27dd9aff968b140d5aee49f5a'
 decimals: 8
 description: >-
   AmberTime is an open blockchain that allows "certified history" to be stored in it.
@@ -24,9 +24,9 @@ notice: >-
   
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=3166694
-- Website: https://ambertime.org
+- Website: http://ambertime.org
 - Blog: http://www.ambertime.com/
-- Whitepaper: https://ambertime.org/media/docs/whitepaper.pdf
+- Whitepaper: http://ambertime.org/media/docs/whitepaper.pdf
 - Email: mailto:info@ambertime.org
 
 name: AmberTime Coin
