List ZAP ZAP TOKEN
https://etherscan.io/token/0x6781a0f84c7e9e846dcb84a9a5bd49333067b104
Closes #431

--- a/tokens/0x6781a0f84c7e9e846dcb84a9a5bd49333067b104.yaml
+++ b/tokens/0x6781a0f84c7e9e846dcb84a9a5bd49333067b104.yaml
@@ -10,10 +10,14 @@ links:
 - Email: mailto:hello@zapproject.org
 - Facebook: https://www.facebook.com/officialzapstore/
 - Github: https://github.com/zapproject/
+- Instagram: https://www.instagram.com/zap_org/
+- Linkedin: https://www.linkedin.com/company/18282905/
 - Reddit: https://www.reddit.com/r/ZapStore/
 - Telegram: https://t.me/ZapStore
-- Twitter: https://twitter.com/the_zapstore
+- Twitter: https://twitter.com/zaporacles
 - Website: https://zap.store/
 - Whitepaper: https://zap.store/whitepaper.pdf
+- YouTube: https://www.youtube.com/watch?v=j1ibgCHuOR8
+- YouTube: https://www.youtube.com/channel/UCj53uS32K8UwQCytBwPqmtg
 name: ZAP TOKEN
 symbol: ZAP
