[UPD] add mailto before mail address

--- a/tokens/0x5adc961D6AC3f7062D2eA45FEFB8D8167d44b190.yaml
+++ b/tokens/0x5adc961D6AC3f7062D2eA45FEFB8D8167d44b190.yaml
@@ -8,7 +8,7 @@ links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2620895.new#new
 - Blog: https://medium.com/@DETHER
 - CoinMarketCap: https://coinmarketcap.com/currencies/dether/
-- Email: hello@dether.io
+- Email: mailto:hello@dether.io
 - Facebook: https://www.facebook.com/dether.io/
 - Reddit: https://www.reddit.com/r/Dether/
 - Telegram: https://t.me/joinchat/GkdUjUQ4jx_Apxmz2km4ww
