--- a/tokens/0xa701122c1b67220a8b6883d03c8ad67896b12466.yaml
+++ b/tokens/0xa701122c1b67220a8b6883d03c8ad67896b12466.yaml
@@ -1,17 +1,17 @@
 ---
 addr: '0xa701122c1b67220a8b6883d03c8ad67896b12466'
 decimals: 8
-description: Fan made promo meme token for the mineable BroFistCoin (BFC) cryptocurrency
+description: BroFistCoin (PEW) is a fan made cryptocurrency for the PewDiePie's meme network.
 name: BroFistCoin
 symbol: PEW
 links:
 - Email: mailto:info@brofistcoin.io
-- Twitter: https://twitter.com/Brofistcoin61
+- Twitter: https://twitter.com/BroFistCoinOff
 - Website: http://brofistcoin.io/
 - Reddit: https://www.reddit.com/r/BrofistCoin/
 - Facebook: https://www.facebook.com/BroFistCoin/
-- YouTube: https://www.youtube.com/watch?v=Jz50eTT6y8g
+- YouTube: https://www.youtube.com/watch?v=mCfKI-Zyx4Y
 notice: >-
-    PEW is a meme token and comes with no guarantees. It's a fan made joke token
+    PEW is a meme coin and comes with no guarantees. It's a fan made joke coin
     to honor PewDiePie who clearly knows de wae.
-    It's essentially worthless and you should not invest anything in PEW token.
+    It's essentially worthless and you should not invest your life savings in PEW.
