--- a/tokens/0x9e88613418cf03dca54d6a2cf6ad934a78c7a17a.yaml
+++ b/tokens/0x9e88613418cf03dca54d6a2cf6ad934a78c7a17a.yaml
@@ -2,12 +2,16 @@
 addr: '0x9e88613418cf03dca54d6a2cf6ad934a78c7a17a'
 decimals: 18
 description: >-
-  Swarm Fund is a fully decentralized capital market place that democratizes investing by using the power
-  of the blockchain to open up high-return, alternative investment classes to smaller investors through
-  asset-backed funds using cryptocurrency tokens.
+  Swarm Fund is the blockchain for private equity. It’s a fully decentralized capital market place
+  that democratizes investing by using the power of the blockchain to open up high-return, alternative
+  investment classes to smaller investors through asset-backed funds using cryptocurrency tokens. It
+  makes traditionally exclusive investment opportunities, such as private equity and hedge funds,
+  inclusive for the Swarm by pooling together smaller investments into larger, institutional-sized
+  blocks.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2159615.0
-- Blog: https://blog.swarm.fund/
+- Blog: https://medium.com/swarmfund
+- CoinMarketCap: https://coinmarketcap.com/currencies/swarm-fund/
 - Email: mailto:contact@swarm.fund
 - Facebook: https://www.facebook.com/swarmalliance
 - Github: https://github.com/swarmfund
