--- a/tokens/0x2af989200e9cd8d3404b5b40f5e2f896302d9aa5.yaml
+++ b/tokens/0x2af989200e9cd8d3404b5b40f5e2f896302d9aa5.yaml
@@ -9,5 +9,6 @@ links:
 - Telegram: https://t.me/joinchat/AAAAAFIZi4HDO6_CFAhVZA
 - Website: https://ecocrypto.io
 - YouTube: https://www.youtube.com/channel/UCt67ZuES3mknk_LJaX10J2w?view_as=subscriber
+- Logo: https://ecocrypto.io/wp-content/uploads/2017/11/logo.png
 name: Ecocrypto
 symbol: ECO
