--- a/tokens/0x2af989200e9cd8d3404b5b40f5e2f896302d9aa5.yaml
+++ b/tokens/0x2af989200e9cd8d3404b5b40f5e2f896302d9aa5.yaml
@@ -4,10 +4,11 @@ decimals: 8
 description: >-
   Ecocrypto was established as a financial institution and has sharpened the business to become a decentralized Open source credit and Big Data Bureau on blockchain. Ecocrypto provides Individuals and SMEs with short-term loans as the best solution for their financial problems. Ecocrypto uses innovative risk scoring implemented by artificial neural network. Ecocrypto utilizes the power of Blockchain Technology as a tool to create the next generation of money and finance.
 links:
-- Bitcointalk: https://bitcointalk.org/index.php?topic=3069112
-- Facebook: https://www.facebook.com/EcoCrypto/
-- Telegram: https://t.me/joinchat/AAAAAFIZi4HDO6_CFAhVZA
 - Website: https://ecocrypto.io
+- Telegram: https://t.me/joinchat/AAAAAFIZi4HDO6_CFAhVZA
+- Bitcointalk: https://bitcointalk.org/index.php?topic=3069112
+- Whitepaper: https://drive.google.com/file/d/1x4vJjDW3VBrY7EZEZkUq6hw4a4GKzjgT/view
+- Facebook: https://www.facebook.com/EcoCrypto/
 - YouTube: https://www.youtube.com/channel/UCt67ZuES3mknk_LJaX10J2w?view_as=subscriber
 - Logo: https://ecocrypto.io/wp-content/uploads/2017/11/logo.png
 name: Ecocrypto
