--- a/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
+++ b/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
@@ -2,7 +2,9 @@
 addr: '0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64'
 decimals: 18
 description: >-
-  The goal of the IST34 Token is simple: BlockChain, Strategy, Education. IST34 Token is a digital assets (like cryptocurrancy, etc.). The goal of the IST34 Token is simple: BlockChain, Strategy, Education. The main aim of this "IST34 Token" is to teach the strategic significance of the blockchain with its educational tools and its wide applications. Blockchain is to evaluate from the perspective of a scientist and an educator.
+  The goal of the IST34 Token is simple: BlockChain, Strategy, Education. IST34 Token is a digital assets (like cryptocurrancy, etc.).
+  The goal of the IST34 Token is simple: BlockChain, Strategy, Education. The main aim of this "IST34 Token" is to teach the strategic significance of the blockchain with its educational tools and its wide applications.
+  Blockchain is to evaluate from the perspective of a scientist and an educator.
 links:
 - Email: mailto: ist34token@gmail.com
 - Twitter: https://twitter.com/IST34_Token
@@ -17,8 +19,8 @@ links:
 - Medium: https://medium.com/@ist34token
 - Youtube: https://www.youtube.com/channel/UCwEbCIn8VkPMBXuyyg8Ia8w
 - Discord: https://discordapp.com/invite/hY9JN9r
-- Bitcoingarden: https://bitcoingarden.org/forum/index.php?topic=33783
-- Altcoinstalks: https://www.altcoinstalks.com/index.php?topic=14556.0
+- Blog: https://bitcoingarden.org/forum/index.php?topic=33783
+- Blog: https://www.altcoinstalks.com/index.php?topic=14556.0
 - Website: http://mehmetkececi.com/2018/04/09/ist34-token/1765
 name: IST34 Token
 symbol: IST34
