--- a/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
+++ b/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
@@ -2,10 +2,10 @@
 addr: '0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64'
 decimals: 18
 description: >-
-  IST34 Token is a digital assets (like cryptocurrancy, etc.). The goal of the IST34 Token is simple: 
-  BlockChain, Strategy, Education. The main aim of this "IST34 Token" is to teach the strategic significance of the blockchain 
-  with its educational tools and its wide applications. Blockchain is to evaluate from the perspective of a scientist 
-  and an educator.
+  IST34 Token is a digital assets (like cryptocurrancy, etc.). The goal of the IST34 Token is simple:
+  BlockChain, Strategy, Education. The main aim of this "IST34 Token" is to teach the strategic significance
+  of the blockchain with its educational tools and its wide applications. Blockchain is to evaluate from the
+  perspective of a scientist and an educator.
 links:
 - Email: mailto: ist34token@gmail.com
 - Twitter: https://twitter.com/IST34_Token
