--- a/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
+++ b/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
@@ -18,8 +18,9 @@ links:
 - Gitter: https://gitter.im/IST34-Token
 - Reddit: https://www.reddit.com/user/IST34_Token
 - Medium: https://medium.com/@ist34token
-- Youtube: https://www.youtube.com/channel/UCwEbCIn8VkPMBXuyyg8Ia8w
+- YouTube: https://www.youtube.com/channel/UCwEbCIn8VkPMBXuyyg8Ia8w
 - Discord: https://discordapp.com/invite/hY9JN9r
+- Linkedin: https://www.linkedin.com/in/ist34-token
 - Blog: https://bitcoingarden.org/forum/index.php?topic=33783
 - Blog: https://www.altcoinstalks.com/index.php?topic=14556.0
 - Website: http://mehmetkececi.com/2018/04/09/ist34-token/1765
