--- a/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
+++ b/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
@@ -21,6 +21,7 @@ links:
 - YouTube: https://www.youtube.com/channel/UCwEbCIn8VkPMBXuyyg8Ia8w
 - Discord: https://discordapp.com/invite/hY9JN9r
 - Linkedin: https://www.linkedin.com/in/ist34-token
+- Slack: https://ist34token.slack.com
 - Blog: https://bitcoingarden.org/forum/index.php?topic=33783
 - Blog: https://www.altcoinstalks.com/index.php?topic=14556.0
 - Website: http://mehmetkececi.com/2018/04/09/ist34-token/1765
