--- a/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
+++ b/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
@@ -25,5 +25,6 @@ links:
 - Blog: https://bitcoingarden.org/forum/index.php?topic=33783
 - Blog: https://www.altcoinstalks.com/index.php?topic=14556.0
 - Website: http://mehmetkececi.com/2018/04/09/ist34-token/1765
+- Whitepaper: https://drive.google.com/file/d/1HmI3eupKg_iZYOW8puy-iy5A_auRAUKm/view?usp=sharing
 name: IST34 Token
 symbol: IST34
