--- a/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
+++ b/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
@@ -9,21 +9,19 @@ description: >-
 links:
 - Email: mailto:ist34token@gmail.com
 - Twitter: https://twitter.com/IST34_Token
-- Github: https://github.com/IST34
 - Github: https://github.com/IST34Token
-- GooglePlus: https://plus.google.com/u/0/113021637425036555993
-- GooglePlus: https://plus.google.com/u/0/communities/110665072117418849073
 - Facebook: https://www.facebook.com/ist34token
 - Telegram: https://t.me/IST34Token
-- Gitter: https://gitter.im/IST34-Token
 - Reddit: https://www.reddit.com/user/IST34_Token
-- Medium: https://medium.com/@ist34token
 - YouTube: https://www.youtube.com/channel/UCwEbCIn8VkPMBXuyyg8Ia8w
 - Discord: https://discordapp.com/invite/hY9JN9r
 - Linkedin: https://www.linkedin.com/in/ist34-token
 - Slack: https://ist34token.slack.com
 - Blog: https://bitcoingarden.org/forum/index.php?topic=33783
 - Blog: https://www.altcoinstalks.com/index.php?topic=14556.0
+- Blog: https://medium.com/@ist34token
+- Blog: https://plus.google.com/u/0/communities/110665072117418849073
+- Blog: https://gitter.im/IST34-Token
 - Website: http://mehmetkececi.com/2018/04/09/ist34-token/1765
 - Whitepaper: https://drive.google.com/file/d/1HmI3eupKg_iZYOW8puy-iy5A_auRAUKm/view?usp=sharing
 name: IST34 Token
