--- a/tokens/0x80238d9451f86dcf12bff21af9e8deadcf915bff.yaml
+++ b/tokens/0x80238d9451f86dcf12bff21af9e8deadcf915bff.yaml
@@ -11,7 +11,7 @@ links:
 - Facebook: https://www.facebook.com/eticket4
 - Reddit: https://www.reddit.com/r/ico/comments/7vf3nx/eticket4_review_of_ico/
 - Twitter: https://twitter.com/Eticket4_ICO
-- Website: https://et4.io
+- Website: http://et4.io
 - Whitepaper: http://et4.io/ET4_WP_ENG.pdf
 name: Eticket4
 symbol: ET4
