--- a/tokens/0xAC9E0035dC040671E5646dc9b8896d7D78C48F85.yaml
+++ b/tokens/0xAC9E0035dC040671E5646dc9b8896d7D78C48F85.yaml
@@ -2,7 +2,12 @@
 addr: '0xAC9E0035dC040671E5646dc9b8896d7D78C48F85'
 decimals: 18
 description: >-
-  Hint is an AI-commerce technology integrated into digital or voice assistants built on Hint platform; a privacy enabled data analytics platform using blockchain technology to collect, analyse and share purchase information with the  community. We believe that by digitising, analysing and measuring our everyday shopping data can help improve our quality of life. Talk to Hint 24/7 which helps you with your day to day shopping tasks, hassle-free reminders and proactively finds best prices on products you buy regularly. Role of HINT token is to pay for AI services on Hint Mobile and Digital assistants like Amazon Alexa and Google Home.
+  Hint is an AI-commerce technology integrated into digital or voice assistants built on Hint platform; 
+  a privacy enabled data analytics platform using blockchain technology to collect, analyse and share 
+  purchase information with the  community. We believe that by digitising, analysing and measuring our everyday 
+  shopping data can help improve our quality of life. Talk to Hint 24/7 which helps you with your day to day 
+  shopping tasks, hassle-free reminders and proactively finds best prices on products you buy regularly. 
+  Role of HINT token is to pay for AI services on Hint Mobile and Digital assistants like Amazon Alexa and Google Home.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2832282.0
 - Email: mailto:ask@hint.to
