--- a/tokens/0xefbd6d7def37ffae990503ecdb1291b2f7e38788.yaml
+++ b/tokens/0xefbd6d7def37ffae990503ecdb1291b2f7e38788.yaml
@@ -2,9 +2,9 @@
 addr: '0xefbd6d7def37ffae990503ecdb1291b2f7e38788'
 decimals: 18
 description: >-
-  While EOS has developed a powerful infrastructure for Blockchain Applications, the
-  Governance Structure and Block Producer ownership model leads to highly manipulated
-  compensation and hinders development of the EOS community. Evolution is a community driven adaptation of the EOS open source software.
+  EOS open source is a powerful infrastructure for Blockchain Applications. However the
+  Governance Structure and Ownership model leads to highly manipulated
+  compensation and lacks trusted partners for the community to build on. Evolution is a community driven adaptation of EOS open source software.
   Evolution structures votes and evenly distributes tokens to ensure true decentralization.
 links:
 - Blog: https://medium.com/@evolutionos/
@@ -13,6 +13,7 @@ links:
 - Reddit: https://www.reddit.com/r/EvolutionOS/
 - Slack: https://evolutionos.slack.com/
 - Telegram: https://t.me/evolutionos/
+- Discussion: https://steem.ly/sl/
 - Website: https://www.evolutionos.com/
 name: Evolution
 symbol: Evo
