--- a/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
+++ b/tokens/0x0cf713b11c9b986ec40d65bd4f7fbd50f6ff2d64.yaml
@@ -7,7 +7,7 @@ description: >-
   of the blockchain with its educational tools and its wide applications. Blockchain is to evaluate from the
   perspective of a scientist and an educator.
 links:
-- Email: mailto:ist34token@gmail.com
+- Email: mailto:ist34@hiperteknoloji.org
 - Twitter: https://twitter.com/IST34_Token
 - Github: https://github.com/IST34Token
 - Facebook: https://www.facebook.com/ist34token
@@ -22,7 +22,7 @@ links:
 - Blog: https://medium.com/@ist34token
 - Blog: https://plus.google.com/u/0/communities/110665072117418849073
 - Blog: https://gitter.im/IST34-Token
-- Website: http://mehmetkececi.com/2018/04/09/ist34-token/1765
-- Whitepaper: https://drive.google.com/file/d/1HmI3eupKg_iZYOW8puy-iy5A_auRAUKm/view?usp=sharing
+- Website: http://hiperteknoloji.org
+- Whitepaper: http://hiperteknoloji.org/ht/IST34_Token.pdf
 name: IST34 Token
 symbol: IST34
