--- a/tokens/0xafbec4d65bc7b116d85107fd05d912491029bf46.yaml
+++ b/tokens/0xafbec4d65bc7b116d85107fd05d912491029bf46.yaml
@@ -2,7 +2,7 @@
 addr: '0xafbec4d65bc7b116d85107fd05d912491029bf46'
 decimals: 18
 description: >-
-  Arbitraging is an arbitrage trading company that specializes in creating sophisticated algorithms (bot) that operate by exploiting the market inefficiency, which, in financial world, is called ARBITRAGE
+  Arbitraging is an arbitrage trading company that specializes in creating sophisticated algorithms, is called ARBITRAGE
 links:
 - Website: https://www.arbitraging.co/
 - Email: arbitraging@arbitraging.co
