--- a/tokens/0xafbec4d65bc7b116d85107fd05d912491029bf46.yaml
+++ b/tokens/0xafbec4d65bc7b116d85107fd05d912491029bf46.yaml
@@ -5,7 +5,7 @@ description: >-
   Arbitraging is an arbitrage trading company that specializes in creating sophisticated algorithms, is called ARBITRAGE
 links:
 - Website: https://www.arbitraging.co/
-- Email: arbitraging@arbitraging.co
+- Email: mailto:arbitraging@arbitraging.co
 - Telegram: https://t.me/arbofficial
 - Twitter: https://twitter.com/arbitragingco
 - Facebook: https://web.facebook.com/arbitraging
