fix message length
fix message length

--- a/tokens/0x15e3eb661149489ccadac1bb8f51e9941e8ed885.yaml
+++ b/tokens/0x15e3eb661149489ccadac1bb8f51e9941e8ed885.yaml
@@ -2,8 +2,8 @@
 addr: '0x15e3eb661149489ccadac1bb8f51e9941e8ed885'
 decimals: 18
 description: >-
-  Robot Trading of Cryptocurrency ? Robot trading is Automatic Cryptocurrency Trading System with Algorithm that can be purchased and sold. Can make more profit than General trader.
-  Robot Trading of Cryptocurrency issues a Cryptocurrency named Robot Coin to bring the Coin to the market exchange and use the Robot Trading system of Cryptocurrency. In order to make a profit.
+  Robot Trading of Cryptocurrency ? Robot trading is Automatic Cryptocurrency Trading System with Algorithm
+  that can be purchased and sold. Can make more profit than General trader.
 links:
 - Twitter: https://twitter.com/robottrading1
 - Facebook: https://www.facebook.com/Robottrading-478628305854107
