--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -12,6 +12,7 @@ pycryptodome==3.4.11
 pylru==1.0.9
 pysha3==1.0.2
 requests==2.18.4
+requests-html==0.9.0
 cfscrape==1.9.5
 rfc3986==1.1.0
 rlp==0.6.0
