Add email and facebook links to NPXS

--- a/tokens/0xa15c7ebe1f07caf6bff097d8a589fb8ac49ae5b3.yaml
+++ b/tokens/0xa15c7ebe1f07caf6bff097d8a589fb8ac49ae5b3.yaml
@@ -8,6 +8,8 @@ links:
 - Blog: https://blog.pundix.com
 - Blog: https://medium.com/pundix
 - CoinMarketCap: https://coinmarketcap.com/currencies/pundi-x/
+- Email: mailto:contact@pundix.com
+- Facebook: https://www.facebook.com/pundixlabs/
 - Linkedin: https://www.linkedin.com/company/13423325/
 - Telegram: https://t.me/pundix
 - Twitter: https://twitter.com/pundixlabs
