--- a/tokens/0x6f539a9456a5bcb6334a1a41207c3788f5825207.yaml
+++ b/tokens/0x6f539a9456a5bcb6334a1a41207c3788f5825207.yaml
@@ -8,6 +8,7 @@ links:
 - Email: mailto:info@ohni.us
 - Twitter: https://twitter.com/OhniOfficial
 - Website: http://ohni.us
+- Website: http://ohni.us/
 - Whitepaper: http://ohni.us/whitepaper.pdf
 name: Ohni
-symbol: Ohni
+symbol: OHNI
