--- a/tokens/0x6f539a9456a5bcb6334a1a41207c3788f5825207.yaml
+++ b/tokens/0x6f539a9456a5bcb6334a1a41207c3788f5825207.yaml
@@ -1,4 +1,5 @@
 ---
+__FORKDELTA_CUSTOM_SYMBOL: OHNI
 addr: '0x6f539a9456a5bcb6334a1a41207c3788f5825207'
 decimals: 18
 description: >-
@@ -8,6 +9,5 @@ links:
 - Twitter: https://twitter.com/OhniOfficial
 - Telegram: https://T.me/OhniGroup
 - Website: http://ohni.us
-- Whitepaper: http://ohni.us/whitepaper.pdf
 name: Ohni
 symbol: OHNI
