--- a/tokens/0x7d266ed871f24d7b47b5a8b80abb391178c48bac.yaml
+++ b/tokens/0x7d266ed871f24d7b47b5a8b80abb391178c48bac.yaml
@@ -1,6 +1,5 @@
 ---
-__FORKDELTA_CUSTOM_SYMBOL: STAKE_OLD
-addr: '0xbec8f6d667594fb181c9d68e5c80c910888be93d'
+addr: '0x7d266ed871f24d7b47b5a8b80abb391178c48bac'
 decimals: 8
 description: >-
   StakeIt Token (STAKE) is a community-driven investment token allowing token
@@ -10,17 +9,16 @@ description: >-
   are used to buy-back and destroy tokens.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2401104.0
+- Blog: https://medium.com/@stakeit
 - Email: mailto:support@stake-it.com
 - Github: https://github.com/StakeItToken/StakeIt
+- Instagram: https://www.instagram.com/stakeittoken/
 - Reddit: https://www.reddit.com/r/StakeIt/
 - Slack: https://stakeit.slack.com/
-- Twitter: https://twitter.com/StakeIt_Token
-- Website: https://www.stake-it.com/
-notice: >-
-  <strong>This token is deprecated.</strong>
-  You can read about the token swap here:
-  <a href="https://medium.com/@stakeit/staking-smart-contract-breach-token-swap-information-136348732b26">https://medium.com/@stakeit/staking-smart-contract-breach-token-swap-information-136348732b26</a>;
-  new token details:
-  <a href="https://medium.com/@stakeit/how-to-stake-new-token-details-133c34fa5215">https://medium.com/@stakeit/how-to-stake-new-token-details-133c34fa5215</a>
+- Telegram: https://t.me/StakeItTelegram
+- Twitter: https://twitter.com/stakeit_token
+- Website: https://www.stake-it.com
+- YouTube: https://www.youtube.com/channel/UC-Yp-mI3aQZGnBGq5OTqmkA
+- Whitepaper: https://github.com/StakeItToken/StakeIt
 name: StakeIt
 symbol: STAKE
