--- a/tokens/0xd6e49800decb64c0e195f791348c1e87a5864fd7.yaml
+++ b/tokens/0xd6e49800decb64c0e195f791348c1e87a5864fd7.yaml
@@ -1,5 +1,5 @@
 ---
-__FORKDELTA_CUSTOM_SYMBOL: RCT
+__FORKDELTA_CUSTOM_SYMBOL: RCPT
 addr: '0xd6e49800decb64c0e195f791348c1e87a5864fd7'
 decimals: 9
 description: >-
