--- a/tokens/0xafbec4d65bc7b116d85107fd05d912491029bf46.yaml
+++ b/tokens/0xafbec4d65bc7b116d85107fd05d912491029bf46.yaml
@@ -3,7 +3,7 @@ addr: '0xafbec4d65bc7b116d85107fd05d912491029bf46'
 decimals: 18
 description: >-
 Arbitraging is an arbitrage trading company that specializes in creating sophisticated algorithms, is called ARBITRAGE
-links:
+links
 - Website: https://www.arbitraging.co/
 - Email: mailto:arbitraging@arbitraging.co
 - Telegram: https://t.me/arbofficial
