--- a/tokens/0xba4725e435a287e28783886fcbcb339436a6ae66.yaml
+++ b/tokens/0xba4725e435a287e28783886fcbcb339436a6ae66.yaml
@@ -2,7 +2,7 @@
 addr: '0xba4725e435a287e28783886fcbcb339436a6ae66'
 decimals: 2
 links:
-- Email: ethereumbyte@gmail.com
+- Email: http://ethereumbyte@gmail.com
 - Telegram: https://telegram.me/Etherbyte
 - Twitter: https://twitter.com/Etherbyte_
 - Website: https://etherbyte.center
