--- a/tokens/0x26d5bd2dfeda983ecd6c39899e69dae6431dffbb.yaml
+++ b/tokens/0x26d5bd2dfeda983ecd6c39899e69dae6431dffbb.yaml
@@ -1,18 +1,15 @@
 ---
-__FORKDELTA_CUSTOM_SYMBOL: ERC20
+__FORKDELTA_CUSTOM_SYMBOL: ERC20_OLD
 addr: '0x26d5bd2dfeda983ecd6c39899e69dae6431dffbb'
 decimals: 18
-description: >-
-  For free airdrop will be distributed 120,797,671 ERC (1% at the time of launch) proportionally among
-  all the participants airdrop and buyers. Go to link below to our website <a href="http://erc20.space"
-  target="_blank">http://erc20.space</a> for the free airdrop! Follow Telegram chat and Telegram news
-  channel, <a href="https://t.me/erc20coins" target="_blank">https://t.me/erc20coins</a> for daily updates
-  on crypto airdrops and project.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2304875.0
 - CoinMarketCap: erc20
 - Email: mailto:erc20.space@gmail.com
 - Telegram: https://t.me/erc20coin
 - Website: http://erc20.space/
+notice: >-
+  <strong>This token is deprecated.</strong> Read about the token
+  <a href="https://belance.io/exchange.html">here.</a>
 name: ERC20
 symbol: ERC
