Rename PXT to PXTPopulous as per #1178

--- a/tokens/0xc14830e53aa344e8c14603a91229a0b925b0b262.yaml
+++ b/tokens/0xc14830e53aa344e8c14603a91229a0b925b0b262.yaml
@@ -1,5 +1,5 @@
 ---
-__FORKDELTA_CUSTOM_SYMBOL: PXBRL
+__FORKDELTA_CUSTOM_SYMBOL: PXTPopulous
 addr: '0xc14830e53aa344e8c14603a91229a0b925b0b262'
 decimals: 8
 description: >-
