--- a/tokens/0xba4725e435a287e28783886fcbcb339436a6ae66.yaml
+++ b/tokens/0xba4725e435a287e28783886fcbcb339436a6ae66.yaml
@@ -4,7 +4,7 @@ decimals: 2
 links:
 - Email: http://ethereumbyte@gmail.com
 - Telegram: https://telegram.me/Etherbyte
-- Twitter: https://twitter.com/Etherbyte_
+- Twitter: https://twitter.com/Etherbyte
 - Website: https://etherbyte.center
 - Whitepaper: https://docs.wixstatic.com/ugd/4f0d88_637ed7928c2e4e05b0efa6a516344433.pdf
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2779774.msg28433866#msg28433866
