Use sudo to update CA certs (and a distro that allows sudo)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 ---
+sudo: required
+dist: precise
 language: python
 python: "3.6"
 addons:
@@ -16,7 +18,7 @@ before_install:
   - git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep tokens/
 
 install:
-  - update-ca-certificates --verbose
+  - sudo update-ca-certificates --verbose
   - pip install yamllint
   - pip install -r scripts/requirements.txt
 cache: pip
