--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,5 +1,4 @@
 beautifulsoup4==4.6.0
-certifi==2018.1.18
 chardet==3.0.4
 cytoolz==0.9.0
 eth-abi==0.5.0
@@ -11,7 +10,7 @@ idna==2.6
 pycryptodome==3.4.11
 pylru==1.0.9
 pysha3==1.0.2
-requests==2.18.4
+requests[security]==2.18.4
 requests-html==0.9.0
 cfscrape==1.9.5
 rfc3986==1.1.0
