Add Coinmarketcap link

--- a/tokens/0x5d4abc77b8405ad177d8ac6682d584ecbfd46cec.yaml
+++ b/tokens/0x5d4abc77b8405ad177d8ac6682d584ecbfd46cec.yaml
@@ -4,7 +4,7 @@ decimals: 18
 description: >-
   Restoring Health to the Internet
 links:
-- CoinMarketCap: primas
+- CoinMarketCap: https://coinmarketcap.com/currencies/primas/
 - Email: mailto:support@primas.io
 - Facebook: https://www.facebook.com/summer.primas
 - Github: https://github.com/primasio
