--- a/tokens/0x5d4abc77b8405ad177d8ac6682d584ecbfd46cec.yaml
+++ b/tokens/0x5d4abc77b8405ad177d8ac6682d584ecbfd46cec.yaml
@@ -1,20 +1,16 @@
 ---
-__FORKDELTA_CUSTOM_SYMBOL: PST_OLD
-addr: '0xe3fedaecd47aa8eab6b23227b0ee56f092c967a9'
+addr: '0x5d4abc77b8405ad177d8ac6682d584ecbfd46cec'
 decimals: 18
 description: >-
-  下一代内容价值生态圈
+  Restoring Health to the Internet
 links:
 - CoinMarketCap: https://coinmarketcap.com/currencies/primas/
-- Email: mailto:hi@primas.io
+- Email: mailto:support@primas.io
 - Facebook: https://www.facebook.com/summer.primas
 - Github: https://github.com/primasio
 - Slack: https://primas-io.slack.com/
 - Twitter: https://twitter.com/PrimasOfficial
 - Website: https://primas.io/
 - Whitepaper: https://primas.io/whitepaper/en
-notice: >-
-  <strong>This token is obsolete.</strong> Refer to the homepage for more details:
-  <a href="https://primas.io/pst">https://primas.io/pst</a>
 name: Primas
 symbol: PST
