--- a/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
+++ b/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
@@ -4,10 +4,11 @@ decimals: 18
 description: >- 
 +BEAST token is a utility token which has no ICO nor intial funding but is creating a premium crypto analysis
 +website where top analytics can review ICOs and cryptocurrencies, memebrs will pay a monthly fee with
-+the BEAST token and be able to upvote the top reviews. The most upvoted individual will receive a % in Ethereum of the total users. 
++the BEAST token and be able to upvote the top reviews. The most upvoted individual will receive a % in Ethereum of 
++the total users. 
 +This is a revolutionary proect which is partially an experiment but is gathering the crypto community 
-+and only asking for knowledge to create the project, having already taken the first few steps with no funding the BEAST token is 
-+going to be a revolution within the crypto industry and is tackling bad ICO's straight on.
++and only asking for knowledge to create the project, having already taken the first few steps with no funding the BEAST 
++token is going to be a revolution within the crypto industry and is tackling bad ICO's straight on.
 +links:
 - Blog: www.cryptobeast.uk
 - Email: bullish@cryptobeast.uk
