--- a/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
+++ b/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
@@ -3,7 +3,7 @@ addr: '0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021'
 decimals: 18
 description: >-
 BEAST token is a utility token which has no ICO nor intial funding but is creating a premium crypto analysis
-website: where top analytics can review ICOs and cryptocurrencies members will pay a monthly fee with
+website where top analytics can review ICOs and cryptocurrencies members will pay a monthly fee with
 the BEAST token and be able to upvote the top reviews. The most upvoted individual will receive a % in Ethereum
 of the total users.
 This is a revolutionary proect which is partially an experiment but is gathering the crypto community
