--- a/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
+++ b/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
@@ -5,7 +5,7 @@ description:  BEAST token is a utility token which has no ICO nor intial funding
 website where top analytics can review icos and cryptocurrencies, members will pay a monthly fee with
 the BEAST token and be able to upvote the top reviews. The most upvoted individual will receive a % in Ethereum
 of the total users
-This is a revolutionary proect which is partially an experiment but is gathering the crypto community
+This is a revolutionary project which is partially an experiment but is gathering the crypto community
 and only asking for knowledge to create the project, having already taken the first few steps with no funding
 the BEAST
 token is going to be a revolution within the crypto industry and is tackling bad ICO's straight on.
