--- a/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
+++ b/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
@@ -6,7 +6,7 @@ description: >-
   a premium crypto analysis website where top analysts can review icos and cryptocurrencies, members will
   pay a monthly fee with the BEAST token and be able to upvote the top reviews. The most upvoted individual 
   will receive a % in Ethereum of the total users. This is a revolutionary project which is gathering the 
-  crypto community and only asking for knowledge to help move the project forward.
+  crypto community and and their knowledge to help move the project forward.
 links:
 - Blog: www.cryptobeast.uk
 - Email: bullish@cryptobeast.uk
