--- a/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
+++ b/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
@@ -8,11 +8,11 @@ description: >-
   will receive a % in Ethereum of the total users. This is a revolutionary project which is gathering the
   crypto community and and their knowledge to help move the project forward.
 links:
-- Blog: www.cryptobeast.uk
+- Blog: http://www.cryptobeast.uk
 - Email: bullish@cryptobeast.uk
-- Website: www.cryptobeast.uk
+- Website: http://www.cryptobeast.uk
 - Telegram: https://t.me/TheCryptoExperiement
 - Whitepaper: http://cryptobeast.uk/index.php/2018/06/17/the-crypto-experiment
 - Roadmap: http://cryptobeast.uk/index.php/2018/07/03/beast-token-update
-name: BEAST TOKEN
+name: BEAST
 symbol: BEAST
