--- a/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
+++ b/tokens/0x4ea1771f6ae14dc51e5f3236afca5de34b2c8021.yaml
@@ -9,7 +9,7 @@ description: >-
   crypto community and and their knowledge to help move the project forward.
 links:
 - Blog: http://www.cryptobeast.uk
-- Email: bullish@cryptobeast.uk
+- Email: mailto:bullish@cryptobeast.uk
 - Website: http://www.cryptobeast.uk
 - Telegram: https://t.me/TheCryptoExperiement
 - Whitepaper: http://cryptobeast.uk/index.php/2018/06/17/the-crypto-experiment
