--- a/tokens/0x1bd4e709a076fb71ea1014293a739f2b19ca565d.yaml
+++ b/tokens/0x1bd4e709a076fb71ea1014293a739f2b19ca565d.yaml
@@ -6,11 +6,9 @@ description: >-
 links:
 - Blog: https://medium.com/@labtorum
 - Email: mailto:support@labtorum.com
-- Github: https://github.com/labtorum/labtorum-erc20
-- Telegram: https://t.me/official_labtorum_global
-- Twitter: https://twitter.com/labtorum
-- Facebook: https://www.facebook.com/labtorum
 - Website: https://www.labtorum.com
+- Telegram: https://t.me/official_labtorum_global
 - Whitepaper: https://www.labtorum.com/whitepaper.pdf
+- Roadmap: https://www.labtorum.com/#roadmap
 name: Labtorum
 symbol: LTR
