--- a/tokens/0x1bd4e709a076fb71ea1014293a739f2b19ca565d.yaml
+++ b/tokens/0x1bd4e709a076fb71ea1014293a739f2b19ca565d.yaml
@@ -1,8 +1,7 @@
 ---
 addr: '0x1bd4e709a076fb71ea1014293a739f2b19ca565d'
 decimals: 8
-description: >-
-  Labtorum is an ERC20 wallet application that provides information about profit on trading.
+description: Labtorum is an ERC20 wallet application that provides information about profit on trading.
 links:
 - Blog: https://medium.com/@labtorum
 - Email: mailto:support@labtorum.com
