--- a/tokens/0x1bd4e709a076fb71ea1014293a739f2b19ca565d.yaml
+++ b/tokens/0x1bd4e709a076fb71ea1014293a739f2b19ca565d.yaml
@@ -8,6 +8,7 @@ description: >-
   and transaction in this application.
 links:
 - Website: https://www.labtorum.com
+- CoinMarketCap: Labtorum
 - Email: mailto:support@labtorum.com
 - Github: https://github.com/labtorum
 - Facebook: https://www.facebook.com/labtorum
