--- a/tokens/0x4cfe597e2922790353a093a1de4f6b47a4bb3f44.yaml
+++ b/tokens/0x4cfe597e2922790353a093a1de4f6b47a4bb3f44.yaml
@@ -2,16 +2,17 @@
 addr: '0x4cfe597e2922790353a093a1de4f6b47a4bb3f44'
 decimals: 6
 description: >-
-Xenchain accelerates and strengthen identity verification processes by using e-KYC technology that requires facial recognition, making manual document authentication a thing of the past.
-We creates and distributes XENCs to utilize the decentralized network of blockchain technology and enhancing personal data security by controlling where the data is stored and who has access to that  information.
+  Xenchain accelerates and strengthen identity verification processes by using e-KYC technology that requires facial recognition, 
+  making manual document authentication a thing of the past.
+  We creates and distributes XENCs to utilize the decentralized network of blockchain technology and enhancing personal data security
+  by controlling where the data is stored and who has access to that  information.
 links:
 - Email: mailto:tokensale@xenchain.io
 - Github: https://github.com/XenchainIO
-- Reddit: https://www.reddit.com/r/XenChain/
-- Slack: https://zilliqa.slack.com/
+- Reddit: https://www.reddit.com/r/XenChain
 - Telegram: https://t.me/xenchainio
 - Twitter: https://twitter.com/xen_chain
-- Website: https://xenchain.io/
+- Website: https://xenchain.io
 - Whitepaper: https://xenchain.io/whitepaper.pdf
 - Blog: https://medium.com/@xenchain
 name: Xenchain
