add erc20 token XENC
token symbol = XENC https://xenchain.io

--- a/tokens/0x4cfe597e2922790353a093a1de4f6b47a4bb3f44.yaml
+++ b/tokens/0x4cfe597e2922790353a093a1de4f6b47a4bb3f44.yaml
@@ -10,12 +10,14 @@ description: >-
 links:
 - Website: https://xenchain.io
 - Email: mailto:tokensale@xenchain.io
-- Github: https://github.com/xenchain.io
+- Github: https://github.com/xenchainio
 - Facebook: https://www.facebook.com/xenchainio
 - Telegram: https://t.me/xenchainio
 - Twitter: https://twitter.com/xen_chain
 - Whitepaper: https://www.xenchain.io/whitepaper.pdf
 - Reddit: https://reddit.com/r/xenchain
-- Medium: https://medium.com/@xenchain
+- Blog: https://medium.com/@xenchain
+- Bitcointalk: https://bitcointalk.org/index.php?topic=3081382.0
+- Instagram: https://www.instagram.com/xenchainio
 name: Xenchain
 symbol: XENC
