--- a/tokens/0x41875c2332b0877cdfaa699b641402b7d4642c32.yaml
+++ b/tokens/0x41875c2332b0877cdfaa699b641402b7d4642c32.yaml
@@ -2,8 +2,7 @@
 addr: '0x41875c2332b0877cdfaa699b641402b7d4642c32'
 decimals: 8
 description: >-
-FUTURAX is project of cryptocurrencies exchanger platfrom, 
-we focused to build modern Crypto Market with many feature and benefit to Trader.
+FUTURAX is project of cryptocurrencies exchanger platfrom, we focused to build modern Crypto Market with many feature and benefit to Trader.
 links:
 - CoinMarketCap: https://coinmarketcap.com/currencies/futurax/
 - Bitcointalk: https://bitcointalk.org/index.php?topic=3102862
