[+] Capital Technologies & Research tokens

--- a/tokens/0x2c02c801a3324b371ad285c64af372ff1e23f460.yaml
+++ b/tokens/0x2c02c801a3324b371ad285c64af372ff1e23f460.yaml
@@ -14,5 +14,6 @@ links:
 - Whitepaper: https://mycapitalco.in/docs/technical
 name: Capital
 symbol: CALL
+description: Main currency of the Capital Technologies & Research project
 notice: >-
   Capital (CALL) tokens will be swapped from the Ethereum Main Network into a new PoW blockchain.
