[FIX] YAML files

--- a/tokens/0x2c02c801a3324b371ad285c64af372ff1e23f460.yaml
+++ b/tokens/0x2c02c801a3324b371ad285c64af372ff1e23f460.yaml
@@ -15,5 +15,4 @@ links:
 name: Capital
 symbol: CALL
 description: Main currency of the Capital Technologies & Research project
-notice: >-
-  Capital (CALL) tokens will be swapped from the Ethereum Main Network into a new PoW blockchain.
+notice: Capital (CALL) tokens will be swapped from the Ethereum Main Network into a new PoW blockchain.
