--- a/tokens/0x6c28f85eb1dbc7651ce02f7af1f29890ad084b94.yaml
+++ b/tokens/0x6c28f85eb1dbc7651ce02f7af1f29890ad084b94.yaml
@@ -15,5 +15,4 @@ links:
 name: Capital GAS
 symbol: CALLG
 description: Second currency of the Capital Technologies & Research project
-notice: >-
-  Capital GAS (CALLG) tokens will be swapped from the Ethereum Main Network into a new PoW/PoS blockchain.
+notice: Capital GAS (CALLG) tokens will be swapped from the Ethereum Main Network into a new PoW/PoS blockchain.
