[UPDATE] Token rename

--- a/tokens/0x2c02c801a3324b371ad285c64af372ff1e23f460.yaml
+++ b/tokens/0x2c02c801a3324b371ad285c64af372ff1e23f460.yaml
@@ -12,7 +12,7 @@ links:
 - Twitter: https://twitter.com/capital_company
 - Website: https://www.mycapitalco.in/
 - Whitepaper: https://mycapitalco.in/docs/technical
-name: Capital
-symbol: CALL
+name: Old Capital
+symbol: OCALL
 description: Main currency of the Capital Technologies & Research project
-notice: Capital (CALL) tokens will be swapped from the Ethereum Main Network into a new PoW blockchain.
+notice: This token is going to be swapped into a new blockchain.
