--- a/tokens/0xd1ec43b9d44338a4e74f3f41cd1b86254cbaa874.yaml
+++ b/tokens/0xd1ec43b9d44338a4e74f3f41cd1b86254cbaa874.yaml
@@ -1,11 +1,11 @@
 ---
 addr: '0xd1ec43b9d44338a4e74f3f41cd1b86254cbaa874'
 decimals: 18
-description: >- Tokenized 1 Troy Ounce Gold Bar, Redeemable in Precious Metal (Gold)
-  # The following options were found                                                                       #
-  # You may need to edit them and you MUST delete commented lines                                          #
-  # From the website: description meta tag                                                                 #
+description: >
   Veritaseum enables software-driven P2P capital markets without brokerages, banks or traditional exchanges
+  VGLZ1 is a sub-token of VERI (VERITASEUM) Ecosystem.
+  VGLZ1 is a digital token asset representing 1oz physical fine .999 gold that can be exchanged
+  and then redeemed via the Veritaseum website, or VeADIR Dapp after KYC is provided.
 links:
 - Facebook: https://www.facebook.com/reggiemiddletonfintech/?fref=ts
 - Telegram: https://t.me/joinchat/G_22OhA7UgN6b-7hTSFSTA
@@ -14,7 +14,5 @@ links:
 - YouTube: https://www.youtube.com/channel/UCjVEF7ABJwyzw_8pb5frVmg
 - Blog: https://veritas.veritaseum.com/ve-blog
 - Reddit: https://www.reddit.com/r/VeritaseumCommunity/
-
-
 name: Ve Gold Z1
 symbol: VGLZ1
