--- a/tokens/0xd1ec43b9d44338a4e74f3f41cd1b86254cbaa874.yaml
+++ b/tokens/0xd1ec43b9d44338a4e74f3f41cd1b86254cbaa874.yaml
@@ -7,7 +7,7 @@ description: >-
   VGLZ1 is a digital token asset representing 1oz physical fine .999 gold that can be exchanged
   and then redeemed via the Veritaseum website, or VeADIR Dapp after KYC is provided.
 links:
-- Facebook: https://www.facebook.com/reggiemiddletonfintech/?fref=ts
+- Facebook: https://www.facebook.com/reggiemiddletonfintech/
 - Telegram: https://t.me/joinchat/G_22OhA7UgN6b-7hTSFSTA
 - Twitter: https://twitter.com/reggiemiddleton
 - Website: https://veritas.veritaseum.com/
