--- a/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
+++ b/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
@@ -1,7 +1,7 @@
 ---
 addr: '0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92'
 decimals: 8
-description: 
+description: >-
   UPI ( Unit Payment International ) works primarily on 3 platforms which include loan,
   exchange and shopping platforms on the ethereum blockchain.
   All these bases form an ecosystem where users have all the features that one other company (base) 
