--- a/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
+++ b/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
@@ -2,13 +2,9 @@
 addr: '0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92'
 decimals: 8
 description: >-
-  UPI ( Unit Payment International ) works primarily on 3 platforms which include loan,
-  exchange and shopping platforms on the ethereum blockchain.
-  All these bases form an ecosystem where users have all the features that one other company (base) 
-  cannot provide to its users. Our goal is to launch 2 platforms in 2019 which include a loan platform 
-  (providing loans with easy terms to users) and exchanges (which provide value added for every transaction at low cost) The shopping
-  platform will be launched in mid 2019 where all UPI users can buy and sell items such as on eBay and Amazon on the exchange for UPI and other 
-  large cryptocurrency
+  UPI ( Unit Payment International ) works primarily on 3 platforms which include loan
+  
+  exchange and shopping platforms on the ethereum blockchain. All these bases form an ecosystem where users have all the features that one other company (base) cannot provide to its users
   
 name: Unit Payment International
 symbol: UPI
@@ -21,9 +17,3 @@ links:
 - YouTube: https://www.youtube.com/channel/UC2D3Q6x-Y8XMAD05kNpPfwQ
 - Whitepaper : https://upicoin.com/UPI-whitepaper.pdf
 
-
-notice: >-
-    The UPI is comprised of various institutions ranging from:
-    financial institutions, insurance companies, hospitals, universities and more.
-    
-    
