--- a/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
+++ b/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
@@ -3,11 +3,7 @@ addr: '0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92'
 decimals: 8
 description: >-
   UPI ( Unit Payment International ) works primarily on 3 platforms which include loan
-  
-  exchange and shopping platforms on the ethereum blockchain. All these bases form an ecosystem where users have all the features that one other company (base) cannot provide to its users
-  
-name: Unit Payment International
-symbol: UPI
+  exchange and shopping platforms on the ethereum blockchain. All these bases form an ecosystem where users have all the features that one other company (base) cannot provide to its users.
 links:
 - Email: mailto: admin@upicoin.com
 - Twitter: https://twitter.com/Upi_Coin
@@ -16,4 +12,5 @@ links:
 - Github: https://github.com/UPICoin
 - YouTube: https://www.youtube.com/channel/UC2D3Q6x-Y8XMAD05kNpPfwQ
 - Whitepaper : https://upicoin.com/UPI-whitepaper.pdf
-
+name: Unit Payment International
+symbol: UPI
