--- a/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
+++ b/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
@@ -3,8 +3,9 @@ addr: '0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92'
 decimals: 8
 description: >-
   UPI ( Unit Payment International ) works primarily on 3 platforms which include loan
+  UPI ( Unit Payment International ) works primarily on 3 platforms which include loan, exchange and shopping platforms on the ethereum blockchain
 links:
-- Email: mailto: admin@upicoin.com
+- Email: mailto:admin@upicoin.com
 - Twitter: https://twitter.com/Upi_Coin
 - Website: https://upicoin.com
 - Telegram: https://t.me/UPI_Group
