--- a/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
+++ b/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
@@ -2,15 +2,15 @@
 addr: '0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92'
 decimals: 8
 description: >-
-  UPI ( Unit Payment International ) works primarily on 3 platforms which include loan
-  UPI ( Unit Payment International ) works primarily on 3 platforms which include loan, exchange and shopping platforms on the ethereum blockchain
+  A crypto token that powers dalemat ecosystem. This is a community that hopes to teach  and educate  as
+  many as possible on how  crypto currency trading and investing can be used to improve their finances.
 links:
+- Bitcointalk: https://bitcointalk.org/index.php?topic=5037662.0
+- CoinMarketCap: upi
 - Email: mailto:admin@upicoin.com
-- Twitter: https://twitter.com/Upi_Coin
-- Website: https://upicoin.com
+- Facebook: https://www.facebook.com/upicoin/
 - Telegram: https://t.me/UPI_Group
-- Github: https://github.com/UPICoin
-- YouTube: https://www.youtube.com/channel/UC2D3Q6x-Y8XMAD05kNpPfwQ
-- Whitepaper : https://upicoin.com/UPI-whitepaper.pdf
-name: Unit Payment International
+- Twitter: https://twitter.com/Upi_Coin
+- Website: http://www.upicoin.com/
+name: UPI
 symbol: UPI
