--- a/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
+++ b/tokens/0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92.yml
@@ -1,19 +1,18 @@
 ---
 addr: '0x61B21C6EE787bC1dF5EF873E5F6809711C62Ab92'
 decimals: 8
-description: >-
-  UPI ( Unit Payment International ) works primarily on 3 platforms which include loan
-  
-  exchange and shopping platforms on the ethereum blockchain. All these bases form an ecosystem where users have all the features that one other company (base) cannot provide to its users
-  
+links:
+- Bitcointalk: https://bitcointalk.org/index.php?topic=5037662.0
+- Blog: https://upicoin.com/category/upi-news/
+- Email: mailto:admin@upicoin.com
+- Facebook: https://www.facebook.com/upicoin/
+- Github: https://github.com/UPICoin
+- Reddit: https://www.reddit.com/r/upicoin
+- Telegram: https://t.me/UPI_Group
+- Twitter: https://twitter.com/Upi_Coin
+- Website: https://www.upicoin.com/
+- Whitepaper: https://upicoin.com/UPI-whitepaper.pdf
 name: Unit Payment International
 symbol: UPI
-links:
-- Email: mailto: admin@upicoin.com
-- Twitter: https://twitter.com/Upi_Coin
-- Website: https://upicoin.com
-- Telegram: https://t.me/UPI_Group
-- Github: https://github.com/UPICoin
-- YouTube: https://www.youtube.com/channel/UC2D3Q6x-Y8XMAD05kNpPfwQ
-- Whitepaper : https://upicoin.com/UPI-whitepaper.pdf
-
+description: Main currency of the UPI Technologies & Research project
+notice: Unit Payment International (UPI) tokens will be swapped from the Ethereum Main Network into a new PoW blockchain.
