--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,27 @@
 ---
 language: python
 python: "3.6"
-before_install:
-  - |
-    git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep -q tokens/ || {
-      echo "No updates to token files, skipping build."
-      exit
-    }
-  - git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep tokens/
 
 install:
   - pip install yamllint
   - pip install -r scripts/requirements.txt
 cache: pip
 
-script:
-  - git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs python scripts/test.py
-  - git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs yamllint -c .yamllint
-  - python scripts/build.py
+before_script:
+  - export CHANGED_TOKEN_FILES=`git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE -- tokens/*.yaml`
+  - |
+    if [ ! -z "$CHANGED_TOKEN_FILES" ]; then
+      echo "Testing changes to ${CHANGED_TOKEN_FILES}";
+    else
+      echo "No token file changes detected in ${TRAVIS_COMMIT_RANGE}. Skipping tests.";
+    fi
 
+script:
+  - if [ ! -z "$CHANGED_TOKEN_FILES" ]; then yamllint -c .yamllint $CHANGED_TOKEN_FILES; fi
+  - if [ ! -z "$CHANGED_TOKEN_FILES" ]; then python scripts/test.py $CHANGED_TOKEN_FILES; fi
+
+before_deploy:
+  - python scripts/build.py
 deploy:
   provider: pages
   github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
