edit contract address

--- a/tokens/0xc17195bde49d70cefcf8a9f2ee1759ffc27bf0b1.yaml
+++ b/tokens/0xc17195bde49d70cefcf8a9f2ee1759ffc27bf0b1.yaml
@@ -1,5 +1,5 @@
 ---
-addr: '0xc17195bde49d70cefcf8a9f2ee1759ffc27bf0b1''
+addr: '0xc17195bde49d70cefcf8a9f2ee1759ffc27bf0b1'
 decimals: 18
 description: >-
   The project Groocoin is a cryptocurrency based a beauty content advertisement media platform (“Groo DApp” platform) accumulating quality corporate, social media, and blog contents through partnerships with creators, as well as a blockchain network used in that platform.
