edit homepage url

--- a/tokens/0xc17195bde49d70cefcf8a9f2ee1759ffc27bf0b1.yaml
+++ b/tokens/0xc17195bde49d70cefcf8a9f2ee1759ffc27bf0b1.yaml
@@ -10,6 +10,6 @@ links:
 - Whitepaper: https://groo.io/assets/whitepaper/Groocoin_Whitepaper_v1.0_EN.pdf
 - Telegram: https://t.me/groocoin_official_en
 - Twitter: https://twitter.com/groocoinio
-- Website: https://groos.io/
+- Website: https://groo.io/
 name: Groocoin
 symbol: GROO
