fix whitepaper link

--- a/tokens/0x7ca121b093e2fbd4bb9a894bd5ff487d16f1f83b.yaml
+++ b/tokens/0x7ca121b093e2fbd4bb9a894bd5ff487d16f1f83b.yaml
@@ -10,7 +10,7 @@ links:
 - Twitter: https://twitter.com/lordlessio
 - Website: https://game.lordless.io
 - Website: https://lordless.io
-- Whitepaper: https://lordless.io/whitepaper_en.pdf
+- Whitepaper: https://lordless.io/whitepaper-en.pdf
 name: LORDLESS
 notice: >-
   Note: do tasks and earn tokens
